switches sessionstorage to use cookies

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.0.2",
     "lucide-react": "^0.468.0",
     "next": "14.2.18",
     "openai": "^4.77.0",
